fdo#72217 : Fix for corruption area chart with data labels after Round Trip.

For labels under one series, there were child tags created for every
data label individually.
for example, if under one series there are five labels, then under
<dLbls> there were 5 <dLbl> tags created separately.
This issue is resolved now.

Change-Id: I7ae214f413bc27728df8a3d4cb8f4d703cba2f77